--- a/app/css/master.css
+++ b/app/css/master.css
@@ -10,13 +10,13 @@ Profile:    http://themeforest.net/user/andreysokoltsov
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
-@import url("materialdesignicons.min.css");
+@import url("../assets/material-design-icons/materialdesignicons.min.css");
 
 /* PLUGIN CSS */
 @import url("../assets/jquery.mCustomScrollbar/jquery.mCustomScrollbar.css");
 
 /* MAIN CSS */
-@import url("bootstrap.min.css");
+@import url("../assets/bootstrap/bootstrap.min.css");
 @import url("typography.css");
 @import url("theme.css");
 @import url("responsive.css");
