--- a/app/scss/theme.scss
+++ b/app/scss/theme.scss
@@ -17,6 +17,7 @@
 - Profile:    http://stephanoapiolaza.me
 
 -------------------------------------------------------------------*/
+@import './color';
 
 a {
   color: inherit;
@@ -42,7 +43,7 @@ button:focus {
 }
 
 body {
-  background: #fff;
+  background: $empty-color;
   overflow-x: hidden;
 }
 
@@ -52,102 +53,88 @@ body {
 
 /* Loader */
 #page-preloader {
-  position: fixed;
-  z-index: 100500;
-  top: 0;
-  right: 0;
+  background: $empty-color;
   bottom: 0;
-  left: 0;
-  width: 100%;
   height: 100%;
-  background: #fff;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 100500;
 }
 
 #page-preloader .spinner {
-  position: absolute;
-  z-index: 1001;
-  top: 50%;
-  left: 50%;
-  display: block;
-  width: 100px;
-  height: 100px;
-  margin-top: -50px;
-  margin-left: -50px;
-  -webkit-animation: spin 2.5s infinite linear;
   animation: spin 2.5s infinite linear;
   border: 3px solid transparent;
-  border-top-color: #222222;
   border-radius: 50% !important;
+  border-top-color: $border-color-spinner;
+  display: block;
+  height: 100px;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  position: absolute;
+  top: 50%;
+  width: 100px;
+  z-index: 1001;
 }
 
 #page-preloader .spinner:before, #page-preloader .spinner:after {
-  position: absolute;
-  content: '';
   border-radius: 50%;
+  content: '';
+  position: absolute;
 }
 
 #page-preloader .spinner:before {
-  top: 5px;
-  right: 5px;
-  bottom: 5px;
-  left: 5px;
-  -webkit-animation: spin 2s infinite linear;
   animation: spin 2s infinite linear;
   border: 3px solid transparent;
   //border-top-color: #fb8f13;
+  bottom: 5px;
+  left: 5px;
+  right: 5px;
+  top: 5px;
 }
 
 #page-preloader .spinner:after {
-  top: 15px;
-  right: 15px;
-  bottom: 15px;
-  left: 15px;
-  -webkit-animation: spin 1s infinite linear;
   animation: spin 1s infinite linear;
   border: 3px solid transparent;
-  border-top-color: #ccc;
+  border-top-color: $border-top-color-spinner;
+  bottom: 15px;
+  left: 15px;
+  right: 15px;
+  top: 15px;
 }
 
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
 @keyframes spin {
   0% {
-    -webkit-transform: rotate(0);
     transform: rotate(0);
   }
+
   100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
-/* Loader */
 
+/* Loader */
 
 /* Header */
 .header {
+  color: $empty-color;
+  left: 0;
   padding: 57px 0 8px;
   position: fixed;
   top: 0;
-  left: 0;
+  transition: padding-top 0.3s ease,
+  padding-bottom 0.3s ease,
+  background 0.3s ease;
   width: 100%;
   z-index: 555;
-  color: #fff;
-  transition: padding-top 0.3s ease,
-              padding-bottom 0.3s ease,
-              background 0.3s ease;
 
   &.active {
+    background: $empty-color;
+    box-shadow: 0 2px 5px 0 $box-shadow-rgba-hide;
     padding: 15px 0;
-    background: #fff;
-    box-shadow: 0 2px 5px 0 rgba(#000, 0.1);
 
     .logo {
       padding-left: 50px;
@@ -159,7 +146,6 @@ body {
     }
   }
 
-
 }
 
 .logo {
@@ -168,23 +154,23 @@ body {
 }
 
 .header-avatar {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
   border-radius: 100%;
-  top: 0;
   bottom: 0;
+  height: 30px;
   left: 0;
-  z-index: 1;
   margin: auto;
   opacity: 0;
-  visibility: hidden;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
   transition: opacity 0.3s ease;
+  visibility: hidden;
+  width: 30px;
+  z-index: 1;
 
   img {
-    width: 100%;
     height: 100%;
+    width: 100%;
   }
 }
 
@@ -198,11 +184,12 @@ body {
 
   ul {
     padding-left: 0;
+
     li {
-      list-style: none;
       display: inline-block;
-      vertical-align: middle;
+      list-style: none;
       padding-left: 26px;
+      vertical-align: middle;
 
       a {
         transition: none;
@@ -229,25 +216,26 @@ body {
   width: 16px;
 
   & > div {
-    width: 100%;
+    background: $empty-color;
     height: 2px;
     margin: 2px 0;
-    background: #fff;
+    width: 100%;
   }
 }
 
 .mob-menu-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
   height: 100%;
+  left: 0;
   overflow: hidden;
-  text-align: center;
-  z-index: 9999;
-  transition: transform 0.3s ease;
-  transform: translateY(-100%);
   padding: 0 20px;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease;
+
+  width: 100%;
+  z-index: 9999;
 
   &.active {
     transform: translateY(0);
@@ -256,18 +244,18 @@ body {
   .mobile-menu, .change-lng {
 
     ul {
-      padding: 0;
       margin: 0;
       min-height: 100%;
+      padding: 0;
 
       li {
-        padding: 0;
-        margin-bottom: 30px;
-        list-style: none;
         display: list-item;
+        list-style: none;
+        margin-bottom: 30px;
+        padding: 0;
 
         a {
-          color: #fff;
+          color: $empty-color;
           display: inline-block;
         }
       }
@@ -286,25 +274,25 @@ body {
 }
 
 .mobile-box-flex {
-  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: 100%;
 }
 
 .close-mob-menu {
-  width: 20px;
+  color: $empty-color;
   height: 20px;
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  z-index: 5;
-  color: #fff;
-  text-align: center;
   line-height: 20px;
+  position: absolute;
+  right: 30px;
+  text-align: center;
+  top: 30px;
+  width: 20px;
+  z-index: 5;
 }
-/* Header */
 
+/* Header */
 
 /* First screen */
 .first-screen {
@@ -317,23 +305,24 @@ body {
 }
 
 .first-screen-box {
-  position: absolute;
-  left: 15px;
   bottom: 60px;
+  color: $empty-color;
+  left: 15px;
+  position: absolute;
   width: 100%;
-  color: #fff;
+
 }
 
 .main-avatar {
-  width: 100px;
-  height: 100px;
-  overflow: hidden;
   border-radius: 100%;
+  height: 100px;
   margin-bottom: 20px;
+  overflow: hidden;
+  width: 100px;
 
   img {
-    width: 100%;
     height: 100%;
+    width: 100%;
   }
 }
 
@@ -353,17 +342,17 @@ body {
   margin-bottom: 30px;
 
   .span-title {
-    width: 70px;
-    float: left;
     display: block;
+    float: left;
+    width: 70px;
 
     & + span {
       display: block;
       padding-left: 85px;
 
       &:after {
-        content: '';
         clear: both;
+        content: '';
         display: block;
       }
     }
@@ -377,13 +366,13 @@ body {
     }
 
     .fa {
-      width: 20px;
+      float: left;
       height: 20px;
       line-height: 20px;
-      text-align: center;
       margin-right: 20px;
       opacity: 0.8;
-      float: left;
+      text-align: center;
+      width: 20px;
 
       &:hover {
         opacity: 1;
@@ -401,44 +390,44 @@ body {
     margin-right: 30px;
   }
 }
-/* First screen */
 
+/* First screen */
 
 /* content styles */
 .site-btn {
-  border: none;
   background: none;
-  padding: 15px;
+  border: 0;
   border-radius: 25px;
-  min-width: 170px;
-  text-align: center;
   display: inline-block;
-  vertical-align: top;
+  min-width: 170px;
+  padding: 15px;
+  text-align: center;
   transition: all 0.3s ease;
+  vertical-align: top;
 }
 
 .btn-theme-white {
-  background: #fff;
+  background: $empty-color;
 
   &:hover {
-      box-shadow: 0 10px 20px 0 rgba(37, 37, 37, 0.2);
+    box-shadow: 0 10px 20px 0 $box-shadow-btn-white;
   }
 }
 
 .btn-theme-white-tr {
-  border: 3px solid #fff;
+  border: 3px solid $empty-color;
   padding: 12px 15px;
 
   &:hover {
-     background: #fff;
-    box-shadow: 0 10px 20px 0 rgba(37, 37, 37, 0.2);
-   }
+    background: $empty-color;
+    box-shadow: 0 10px 20px 0 $box-shadow-btn-white;
+  }
 }
 
 .btn-theme-blue,
 .btn-theme-blue:hover,
 .btn-theme-blue:focus {
-  color: #fff;
+  color: $empty-color;
 }
 
 .btn-theme-blue-tr {
@@ -454,7 +443,7 @@ body {
   }
 
   &.contacts-section {
-    border-top: 1px solid #e5e5e5;
+    border-top: 1px solid $border-top-contacts-section;
   }
 
   &.single-project-section {
@@ -475,22 +464,23 @@ body {
   position: relative;
   white-space: nowrap;
 
+  // sass-lint:disable-block no-vendor-prefixes,no-duplicate-properties
   &:after {
+    background: -webkit-linear-gradient(left, $empty-color-rgba 0%, $empty-color 93%, $empty-color 100%);
+    background: -webkit-gradient(linear, left top, right top, from($empty-color-rgba), color-stop(93%, $empty-color), to($empty-color));
+    background: linear-gradient(to right, $empty-color-rgba 0%, $empty-color 93%, $empty-color 100%);
     content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30px;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=1);
     height: 100%;
-    background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, white 93%, white 100%);
-    background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(93%, white), to(white));
-    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 93%, white 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 );
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 30px;
   }
 
   ul {
-    overflow: auto;
     font-size: 0;
+    overflow: auto;
 
     li {
       cursor: pointer;
@@ -511,25 +501,25 @@ body {
 
   .project-img {
     margin-bottom: 15px;
-    position: relative;
     overflow: hidden;
+    position: relative;
 
     &:before {
+      background: rgba(#252525, 0.2); // sass-lint:disable-line no-color-literals
       content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
       height: 100%;
-      z-index: 1;
-      background: rgba(#252525, 0.2);
+      left: 0;
       opacity: 0;
+      position: absolute;
+      top: 0;
       transition: opacity 0.3s ease;
+      width: 100%;
+      z-index: 1;
     }
 
     img {
-      width: 100%;
       transition: transform 0.4s ease;
+      width: 100%;
     }
   }
 
@@ -546,6 +536,7 @@ body {
     .project-name {
       text-decoration: underline;
     }
+
     .project-img {
       img {
         transform: scale3d(1.2, 1.2, 1);
@@ -562,14 +553,14 @@ body {
 }
 
 .modal-content {
+  border: 0;
   border-radius: 0;
-  border: none;
-  box-shadow: 0 2px 5px 0 rgba(#000, 0.1);
+  box-shadow: 0 2px 5px 0 $box-shadow-rgba-hide;
 }
 
 .modal-dialog {
-  width: 650px;
   margin: 60px auto;
+  width: 650px;
 }
 
 .modal-body {
@@ -615,8 +606,8 @@ body {
   text-align: right;
 
   &:after {
-    content: '';
     clear: both;
+    content: '';
     display: block;
   }
 
@@ -658,37 +649,37 @@ body {
 .img-box {
 
   img {
-    max-width: 100%;
     margin-bottom: 15px;
+    max-width: 100%;
   }
 
 }
 
 .legend {
-  text-align: center;
   opacity: 0.8;
+  text-align: center;
 }
 
 .content {
 
   table {
+    border: 1px solid $border-white;
     min-width: 870px;
-    border: 1px solid #e3e3e3;
 
     tr {
 
       th {
+        border: 2px solid $border-white;
         padding: 15px;
-        border: 2px solid #e3e3e3;
-        width: 25%;
         vertical-align: top;
+        width: 25%;
       }
 
       td {
-        vertical-align: top;
-        padding: 15px;
+        border: 2px solid $border-white;
         opacity: 0.8;
-        border: 2px solid #e3e3e3;
+        padding: 15px;
+        vertical-align: top;
         width: 25%;
       }
     }
@@ -719,8 +710,8 @@ body {
 
   .info-line {
     display: inline-block;
-    vertical-align: top;
     margin-right: 30px;
+    vertical-align: top;
 
     &:last-child {
       margin-right: 0;
@@ -735,20 +726,20 @@ body {
     }
 
     .fa {
-      width: 20px;
       height: 20px;
       line-height: 20px;
-      text-align: center;
       margin-right: 20px;
       opacity: 0.8;
+      text-align: center;
+      width: 20px;
     }
   }
 }
 
 #highchart {
+  border: 1px solid $border-white;
   height: 397px;
   width: 870px;
-  border: 1px solid #e3e3e3;
 }
 
 .highcharts-credits, .highcharts-button-box {
@@ -779,11 +770,12 @@ body {
     top: 85px;
     z-index: 1;
   }
+
   &.absolute-sidebar {
-    position: absolute;
-    top: initial;
     bottom: 0;
+    position: absolute;
     right: 15px;
+    top: initial;
   }
 }
 
@@ -792,9 +784,9 @@ body {
 }
 
 .mCS-dark.mCSB_scrollTools .mCSB_draggerRail {
-  height: 10px;
-  background: #e3e3e3;
+  background: $border-white;
   border-radius: 0;
+  height: 10px;
   margin: 3px 0;
 }
 
@@ -805,8 +797,8 @@ body {
 }
 
 .mCSB_scrollTools.mCSB_scrollTools_horizontal {
-  opacity: 1;
   bottom: 14px;
+  opacity: 1;
 }
 
 .mCSB_horizontal > .mCSB_container.mCS_no_scrollbar_x.mCS_x_hidden {
@@ -814,7 +806,6 @@ body {
 }
 
 /* content styles */
-
 
 /* contact */
 .contact-text {
@@ -828,10 +819,10 @@ body {
     position: relative;
 
     .help-block, .help-block-success {
-      position: absolute;
-      top: 3px;
-      right: 0;
       margin: 0;
+      position: absolute;
+      right: 0;
+      top: 3px;
     }
 
     .help-block-success {
@@ -849,16 +840,16 @@ body {
     &.warning, &.error {
 
       .site-input {
-        border-left: none;
-        border-right: none;
+        border-left: 0;
+        border-right: 0;
         padding: 0 16px;
       }
 
       textarea.site-input {
-        padding: 13px 16px!important;
+        padding: 13px 16px !important;
 
         &:hover {
-          padding: 13px!important;
+          padding: 13px !important;
         }
       }
     }
@@ -874,16 +865,16 @@ body {
       }
 
       .site-input {
-        border-left: none;
-        border-right: none;
+        border-left: 0;
+        border-right: 0;
         padding: 0 16px;
       }
 
       textarea.site-input {
-        padding: 13px 16px!important;
+        padding: 13px 16px !important;
 
         &:hover, &:focus {
-          padding: 13px!important;
+          padding: 13px !important;
         }
       }
     }
@@ -891,29 +882,29 @@ body {
 
   @at-root
   .site-input {
+    border: 3px solid $empty-color;
+    border-left-color: $empty-color !important;
+    border-right-color: $empty-color !important;
+    box-shadow: 0 0 1px 1px $border-white;
+    display: block;
     height: 50px;
     padding: 0 13px;
-    width: 100%;
-    display: block;
     transition: box-shadow 0.3s ease, border-color 0.3s ease;
-    border: 3px solid #fff;
-    border-left-color: #fff!important;
-    border-right-color: #fff!important;
-    box-shadow: 0 0 1px 1px #e3e3e3;
+    width: 100%;
 
     &:hover, &:focus {
-      padding: 0 13px!important;
+      padding: 0 13px !important;
     }
   }
 
   @at-root
   textarea.site-input {
-    padding: 13px!important;
     height: 165px;
+    padding: 13px !important;
     resize: none;
 
     &:hover, &:focus {
-      padding: 13px!important;
+      padding: 13px !important;
     }
   }
 
@@ -921,83 +912,17 @@ body {
     text-align: right;
   }
 }
-/* contact */
 
+/* contact */
 
 /* footer */
 .footer {
-  background: #efefef;
+  background: $footer-color;
   padding: 30px 0;
 }
+
 .copyright {
   text-align: center;
 }
+
 /* footer */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
